Fixed file info button hover color in dark mode

--- a/app/resources/sass/dark-mode.scss
+++ b/app/resources/sass/dark-mode.scss
@@ -11,6 +11,10 @@
 
     #file-list a:hover {
         @apply bg-purple-700;
+
+        button:hover {
+            @apply bg-purple-900;
+        }
     }
 
     footer {
